# Mini-Notes

./: .gitignore  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_add_tasks.sql  0003_add_note_links.sql  0004_add_todos.sql  0005_add_todo_hierarchy.sql
src-tauri/src/: db.rs  fs.rs  logger.rs  main.rs  types.rs
src/api/: index.ts
src/components/: AttachmentsWorkspace.tsx  Editor.tsx  FileTree.tsx  NoteList.tsx  SearchModal.tsx  Sidebar.tsx  TaskWorkspace.tsx  TrashWorkspace.tsx
src/types/: index.ts
