[package]
name = "mini-notes"
version = "0.1.3"
description = "A personal note-taking application"
authors = ["Orange Pix Web"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.6", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.4"
sha2 = "0.10"
base64 = "0.21"
dirs = "5.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
once_cell = "1.18"
tauri-plugin-dialog = "2.0"
trash = "5"
